--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -56,6 +56,12 @@
     <script src="libs/lz-string.min.js"></script>
     <script src="js/wx.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/Snapshot.js"></script>
+    <script src="js/GameObject.js"></script>
+    <script src="js/ClientLocal.js"></script>
+    <script src="js/ClientNetwork.js"></script>
+    <script src="js/Server.js"></script>
+    <script src="js/Demo.js"></script>
     <!-- jsfile--endTag -->
 
     <!-- 启动类添加到这里 -->
