client: 添加本地玩家的网络代理

--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -56,6 +56,7 @@
     <script src="libs/lz-string.min.js"></script>
     <script src="js/wx.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/Debug.js"></script>
     <script src="js/Snapshot.js"></script>
     <script src="js/GameObject.js"></script>
     <script src="js/ClientLocal.js"></script>
